--- a/_posts/2018-06-30-elastic.md
+++ b/_posts/2018-06-30-elastic.md
@@ -2,7 +2,7 @@
 title: "Standing up own Elastic Search Cluster"
 last_modified_at: 2018-06-30
 categories:
-  - Blog
+  - Tech
 tags:
   - AWS
   - Elastic Search
