--- a/_posts/2018-06-30-isitup.md
+++ b/_posts/2018-06-30-isitup.md
@@ -2,7 +2,7 @@
 title: "Zero infrastructure health dashboard"
 last_modified_at: 2018-06-30
 categories:
-  - Blog
+  - Tech
 tags:
   - Chrome Plugin
 ---
